--- a/Immutable/index.html
+++ b/Immutable/index.html
@@ -10,6 +10,7 @@
     ></script>
     <script src="./list.js"></script>
     <script src="./map.js"></script>
+    <script src="./fromJS.js"></script>
   </head>
   <body></body>
 </html>
