sort by example using immutable js

--- a/Immutable/index.html
+++ b/Immutable/index.html
@@ -11,6 +11,7 @@
     <script src="./list.js"></script>
     <script src="./map.js"></script>
     <script src="./fromJS.js"></script>
+    <script src="./sort-by.js"></script>
   </head>
   <body></body>
 </html>
