immutable example with ordered map and stack

--- a/Immutable/index.html
+++ b/Immutable/index.html
@@ -8,10 +8,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="./list.js"></script>
-    <script src="./map.js"></script>
-    <script src="./fromJS.js"></script>
-    <script src="./sort-by.js"></script>
+    <script src="./list.js" type="module"></script>
+    <script src="./map.js" type="module"></script>
+    <script src="./ordered-map.js" type="module"></script>
+    <script src="./stack.js" type="module"></script>
+    <script src="./fromJS.js" type="module"></script>
+    <script src="./sort-by.js" type="module"></script>
   </head>
   <body></body>
 </html>
