immutable set example

--- a/Immutable/index.html
+++ b/Immutable/index.html
@@ -11,6 +11,7 @@
     <script src="./list.js" type="module"></script>
     <script src="./map.js" type="module"></script>
     <script src="./ordered-map.js" type="module"></script>
+    <script src="./set.js" type="module"></script>
     <script src="./stack.js" type="module"></script>
     <script src="./fromJS.js" type="module"></script>
     <script src="./sort-by.js" type="module"></script>
